develop 23commit Deploying03

--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,9 @@ dmypy.json
 
 static/
 media/
+2025-08-11__01__plan.xlsx
+.frontend
+/infra/.env_test
+/temp_front/
+/backend__temp/
+/temp_front/
