--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 volumes:
   fg_pg_data:
-#  static:
-#  media:
+  static:
+  media:
 
 services:
   db:
@@ -10,7 +10,49 @@ services:
     volumes:
       - fg_pg_data:/var/lib/postgresql/data
     ports:
-      - "5430:5432"
+      - "5432:5432"
+  backend:
+    image: funtikpiggy/foodgram_backend
+    env_file: .env
+    depends_on:
+      - db
+    volumes:
+      - static:/backend_static
+      - media:/app/media
+  frontend:
+    image: funtikpiggy/foodgram_frontend
+    env_file: .env
+    command: cp -r /app/build/. /frontend_static/
+    volumes:
+      - static:/frontend_static
+  gateway:
+    image: funtikpiggy/foodgram_gateway
+    env_file: .env
+    depends_on:
+      - backend
+      - frontend
+    ports:
+      - 8500:80
+    volumes:
+      - static:/staticfiles
+      - media:/media
+
+
+#volumes:
+#  fg_pg_data:
+##  static:
+##  media:
+#
+#services:
+#  db:
+#    image: postgres:17-alpine
+#    env_file: .env
+#    volumes:
+#      - fg_pg_data:/var/lib/postgresql/data
+#    ports:
+#      - "5430:5432"
+
+
 #  backend:
 #    build: ./backend/
 #    env_file: .env
