develop 25commit Deploying05

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,19 @@
 [flake8]
 ignore =
-    W503
+    W503,
+    F811
 exclude =
     tests/,
     */migrations/,
-    data/
+    data/,
     venv/,
+    .venv/,
+    */venv/,
+    */.venv/,
     env/,
+    .env/,
+    */env/,
+    */.env/,
     docs/,
     frontend/,
     infra/
