--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,31 +68,31 @@ jobs:
           push: true                                             
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
 
-  frontend_tests:
-    name: Test frontend
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up nodeJS
-        uses: actions/setup-node@v3
-        with:                                                       
-          node-version: 21.7.1
-
-      - name: Install dependencies                           
-        run: |
-          cd frontend/
-          npm ci
-
-      - name: Test frontend
-        run: |
-          cd frontend/
-          npm run test
+#  frontend_tests:
+#    name: Test frontend
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v3
+#      - name: Set up nodeJS
+#        uses: actions/setup-node@v3
+#        with:
+#          node-version: 21.7.1
+#
+#      - name: Install dependencies
+#        run: |
+#          cd frontend/
+#          npm ci
+#
+#      - name: Test frontend
+#        run: |
+#          cd frontend/
+#          npm run test
 
   build_frontend_and_push_to_docker_hub:
     name: Push frontend Docker image to DockerHub
     if: github.ref_name == 'main'
     runs-on: ubuntu-latest
-    needs: frontend_tests
+#    needs: frontend_tests
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
