--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -176,7 +176,8 @@ jobs:
             sudo docker compose -f docker-compose.yml exec backend python manage.py collectstatic
             sudo docker compose -f docker-compose.yml exec backend cp -r /app/collected_static/. /backend_static/static/
             sudo docker compose -f docker-compose.yml exec backend cp -r /app/data/images/. /app/media/
-            sudo docker compose -f docker-compose.yml exec backend python manage.py json2db
+            sudo docker compose -f docker-compose.yml exec backend python manage.py loaddata ./data/indented_db.json
+            
 
   send_message:
     name: Send a message in Telegram
