--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,6 +14,11 @@ server {
     client_max_body_size 20M;
   }
 
+  location /s/ {
+    proxy_set_header Host $http_host;
+    proxy_pass http://backend:8000/s/;
+  }
+
   location /media/ {
     alias /media/;
   }
