--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -25,6 +25,7 @@ server {
 
   location / {
     alias /staticfiles/;
-    index index.html;
+    index  index.html index.htm;
+    try_files $uri /index.html;
   }
 }
