--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 POSTGRES_USER=***********
 POSTGRES_PASSWORD=****************
 POSTGRES_DB=******
-DB_HOST=**
+DB_HOST=db
 DB_PORT=5432
 DJANGO_SECRET_KEY='******************************************************************'
 DJANGO_ALLOWED_HOSTS='localhost 127.0.0.1 <ip/domain> <ip/domain> ...'
