main 25commit f-strings

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ DJANGO_SECRET_KEY='*************************************************************
 DJANGO_ALLOWED_HOSTS='localhost 127.0.0.1 <ip/domain> <ip/domain> ...'
 DEBUG_MODE=  # Любая строка == True, не заполнено == False
 DB_PROD_TYPE=True  # Любая строка == True, не заполнено == False
+CSRF_TRUSTED='<https://subdomain.example.com>'  # Ваш адрес
