--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,10 +2,10 @@ server {
   listen 80;
   server_tokens off;
 
-	location /api/docs/ {
-			alias /docs/;
-			try_files $uri $uri/redoc.html;
-	}
+  location /api/docs/ {
+    alias /docs/;
+    try_files $uri /redoc.html;
+  }
 
   location /api/ {
     proxy_set_header Host $http_host;
