--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,11 +1,7 @@
 server {
   listen 80;
   server_tokens off;
-
-  location /api/docs/ {
-    alias /docs/;
-    try_files $uri /redoc.html;
-  }
+  client_max_body_size 10M;
 
   location /api/ {
     proxy_set_header Host $http_host;
@@ -17,6 +13,12 @@ server {
     proxy_set_header Host $http_host;
     proxy_pass http://backend:8000/admin/;
     client_max_body_size 20M;
+  }
+
+  location /docs/ {
+    alias /docs/;
+    index redoc.html
+    try_files $uri /redoc.html;
   }
 
   location /s/ {
