--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,7 +15,7 @@ server {
     client_max_body_size 20M;
   }
 
-  location /docs/ {
+  location /api/docs/ {
     alias /docs/;
     index redoc.html
     try_files $uri /redoc.html;
