--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Main Foodgram workflow
+name: Main PisheBlog workflow
 
 on: push
 
@@ -97,7 +97,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           source: "docker-compose.yml"
-          target: "foodgram"
+          target: "pisheblog"
 
       - name: Executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
@@ -107,7 +107,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           script: |
-            cd foodgram                           
+            cd pisheblog                           
             sudo docker compose -f docker-compose.yml pull 
             sudo docker compose -f docker-compose.yml down
             sudo docker compose -f docker-compose.yml up -d 
